# libnpcm-jtag

./: .gitignore  README.md  configure.ac
include/: jtag.h  jtag_api.h  mctp.h
lib/: Makefile.am  hal_jtag.c  jtag.c  jtag_dev.c  jtag_mctp.c  svf.c
src/: Makefile.am  jtag_rw.c  loadsvf.c
